<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg">
   <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="center"
   		android:orientation="vertical">
   		<TextView
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/loading_title"
			android:textColor="#ffffff"
			android:textSize="40dp"/>
   		<ProgressBar
   		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
   	</LinearLayout>
   	<LinearLayout
        android:id="@+id/layout_fun"
        android:layout_width="200dp"
   		android:layout_height="90dp"
   		android:orientation="vertical"
   		android:layout_marginLeft="70dp"
   		android:visibility="gone">
   		<TextView
   		    android:id="@+id/fun_tip"
   		    android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="戳我戳我！！"
			android:textSize="10dp"
			android:textColor="#ffffff"
			android:background="@drawable/say"
			android:gravity="center"
			android:paddingBottom="10dp"/>
	</LinearLayout>
    <LinearLayout
        android:id="@+id/layout_main"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="center"
   		android:orientation="vertical"
   		android:visibility="gone">
   		<RelativeLayout
   		    android:layout_width="300dp"
   			android:layout_height="wrap_content">
   		    <ImageView
   		        android:id="@+id/image_face"
		        android:layout_width="150dp"
				android:layout_height="348dp"
				android:background="@drawable/bg_face"
				android:layout_centerInParent="true"/>
   		    <Button
   		        android:id="@+id/image_face_field"
		        android:layout_width="150dp"
				android:layout_height="150dp"
				android:layout_marginTop="10dp"
				android:layout_centerHorizontal="true"
				android:background="@null"/>
   		    <TextView
   		        android:id="@+id/tips1_tv"
   		        android:layout_width="250dp"
				android:layout_height="45dp"
				android:text="@string/content_tip1"
				android:textColor="#ffffff"
				android:textSize="15dp"
				android:background="#BB000000"
				android:layout_centerHorizontal="true"
				android:visibility="gone"
				android:layout_marginTop="132dp"
				android:padding="2dp"/>
   		    <RelativeLayout
   		        android:id="@+id/layout_slot"
   		        android:layout_width="300dp"
				android:layout_height="100dp"
				android:background="@drawable/bound_fill_s_h"
				android:layout_marginTop="171dp">
	   		    <com.wtfff.wheel.WheelView android:id="@+id/slot"
	   		        android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_centerInParent="true"
		            android:visibility="invisible"/>
	   		    <TextView
	   		        android:id="@+id/app_title_tv"
	   		        android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:text="@string/app_title"
					android:textColor="#727272"
					android:textSize="45dp"
					android:gravity="center"/>
   		    </RelativeLayout>
   		    <TextView
   		        android:id="@+id/tips2_tv"
   		        android:layout_width="180dp"
				android:layout_height="45dp"
				android:text="@string/content_tip2_normal"
				android:textColor="#ffffff"
				android:textSize="15dp"
				android:background="#BB000000"
				android:layout_centerHorizontal="true"
				android:visibility="gone"
				android:layout_alignBottom="@+id/image_face"
				android:padding="3dp"/>
   		</RelativeLayout>
        <Button
	        android:id="@+id/btn_change"
		   	android:layout_height="48dp" 
	    	android:layout_width="191dp" 
	    	android:text="@string/btn_change_tv"
	    	android:textSize="21dp"
	    	android:textColor="#FFFFFF"
	    	android:background="@drawable/btn_red"/>
        <TextView
            android:id="@+id/tip_location_tv"
	        android:layout_width="wrap_content"
	    	android:layout_height="48dp"
	    	android:textSize="10dp"
	    	android:textColor="#EEEEEE"
	    	android:text="@string/tip1"
	    	android:layout_marginTop="7dp"/>
        <Button
	        android:id="@+id/btn_like"
		   	android:layout_height="48dp" 
	    	android:layout_width="191dp" 
	    	android:text="@string/btn_like_tv"
	    	android:textSize="21dp"
	    	android:textColor="#FFFFFF"
	    	android:layout_marginTop="5dp"
	    	android:background="@drawable/btn_red"
	    	android:visibility="gone"/>
     </LinearLayout>
     <RelativeLayout 
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tip_record_tv"
	         android:layout_width="wrap_content"
	    	 android:layout_height="wrap_content"
	    	 android:textSize="10dp"
	    	 android:textColor="#EEEEEE"
	    	 android:text="@string/tip2"
	    	 android:visibility="invisible"
	    	 android:layout_marginTop="7dp"
	    	 android:layout_centerHorizontal="true"/>
         <TextView
             android:id="@+id/tips3_tv"
	         android:layout_width="260dp"
	    	 android:layout_height="wrap_content"
	    	 android:textSize="15dp"
	    	 android:background="#BB000000"
	    	 android:textColor="#ffffff"
	    	 android:text="@string/content_tip3_normal"
	    	 android:padding="3dp"
	    	 android:layout_marginLeft="10dp"
	    	 android:visibility="invisible"/>
     </RelativeLayout> 
</LinearLayout>
