<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center">
    <!-- <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:gravity="center"
   		android:orientation="vertical">
   		<TextView
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="無聊ＡＰＰ\n    解決您的無聊"
			android:textColor="#ffffff"
			android:textSize="40dp"/>
    	<ProgressBar
   		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
   	</LinearLayout> -->
   	<LinearLayout
   	     android:id="@+id/layout_main"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
	    <RelativeLayout
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="5"
	    	android:background="@drawable/content_bar"
	   		android:layout_marginTop="10dp"
	   		android:padding="8dp">
	    		<ImageView 
	    		    android:layout_width="30dp"
		    		android:layout_height="30dp"
		    		android:background="@drawable/face_small"
		    		android:layout_centerVertical="true"/>
	    		<TextView 
	    		    android:id="@+id/weather_tv"
	    		    android:layout_width="wrap_content"
		    		android:layout_height="match_parent"
		    		android:background="@null"
		    		android:layout_alignParentRight="true"
		    		android:gravity="center"
		    		android:text=""
		    		android:textSize="15dp"
		    		android:textColor="#EEEEEE"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:layout_marginRight="10dp"
	    	android:layout_marginLeft="10dp"
	    	android:layout_marginTop="5dp"
	    	android:layout_marginBottom="5dp"
	    	android:padding="20dp"
	    	android:background="#FFFFFF">
	   		<TextView
	   		    android:id="@+id/description_title"
	   		    android:layout_width="wrap_content"
	   			android:layout_height="wrap_content"
	   			android:textColor="#000000"
	   			android:layout_centerHorizontal="true"
	   			android:gravity="center"/>
	   		<ImageView
	   		    android:id="@+id/description_img"
	   		    android:layout_width="wrap_content"
	   			android:layout_height="120dp"
	   			android:layout_marginTop="10dp"
	   			android:layout_centerHorizontal="true"
	   			android:layout_below="@+id/description_title"
	   			android:background="@null"/>
	   		<ProgressBar
	            android:id="@+id/description_progress"
	            android:layout_width="wrap_content"
	            android:layout_height="120dp"
	            android:layout_marginTop="10dp"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@+id/description_title"
	            android:visibility="visible"/>
	   		<ScrollView
	   		    android:layout_width="wrap_content"
	   			android:layout_height="match_parent"
	   			android:layout_marginTop="10dp"
	   			android:layout_marginBottom="10dp"
	   			android:layout_centerHorizontal="true"
	   			android:layout_below="@+id/description_img"
	   			android:layout_above="@+id/btn_share">
		   		<LinearLayout
		   		    android:id="@+id/description_content"
		   		    android:layout_width="wrap_content"
	   				android:layout_height="wrap_content"
		   			android:orientation="vertical"
		   			android:gravity="center"
		   			android:padding="10dp">
		   		</LinearLayout>
	   		</ScrollView>
	        <Button
		        android:id="@+id/btn_share"
			   	android:layout_height="48dp" 
		    	android:layout_width="191dp" 
		    	android:text="@string/btn_share"
		    	android:textSize="21dp"
		    	android:textColor="#FFFFFF"
		    	android:background="@drawable/btn_red"
		    	android:layout_alignParentBottom="true"
		    	android:layout_centerHorizontal="true"/>
	    </RelativeLayout>
	    <RelativeLayout
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="5">
		    <LinearLayout 
		        android:layout_width="match_parent"
		    	android:layout_height="match_parent"
		    	android:orientation="horizontal"
		    	android:layout_marginBottom="10dp"
		    	android:layout_marginRight="10dp"
		    	android:layout_marginLeft="10dp">
		        <Button
			        android:id="@+id/btn_finish"
				   	android:layout_height="match_parent" 
			    	android:layout_width="match_parent" 
			    	android:text="@string/btn_replay"
			    	android:textSize="20dp"
			    	android:textColor="#FFFFFF"
			    	android:background="@drawable/btn_green"
			    	android:layout_weight="1"
			    	android:layout_marginRight="2dp"/>
		        <Button
			        android:id="@+id/btn_contact_us"
				   	android:layout_height="match_parent" 
			    	android:layout_width="match_parent" 
			    	android:text="@string/btn_contact_us"
			    	android:textSize="20dp"
			    	android:textColor="#FFFFFF"
			    	android:background="@drawable/btn_green"
			    	android:layout_weight="1"
			    	android:layout_marginLeft="2dp"/>
		    </LinearLayout>
		    <TextView
	   		    android:layout_width="match_parent"
	   			android:layout_height="wrap_content"
	   			android:text="@string/resource_from"
	   			android:background="@null"
	   			android:textColor="#ffffff"
	   			android:textSize="8dp"
	   			android:gravity="right"
	   			android:layout_alignParentBottom="true"/> 
	    </RelativeLayout>
 		</LinearLayout>
</LinearLayout>